# python-project-83

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  database.sql  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: build_and_deploy.yml  hexlet-check.yml
config/: settings.example.yaml
page_analyzer/: app.py  runner.py
page_analyzer/core/: app.py  settings.py
page_analyzer/domain/: pa_routes.py  url_manager.py  url_presentation.py  url_routes.py  url_service.py
page_analyzer/entities/enums/: message_enums.py
page_analyzer/entities/forms/: url_forms.py
page_analyzer/entities/named_tupples/: urls_tupple.py
page_analyzer/entities/schemas/: url_schema.py
page_analyzer/infrastructure/alembic/: env.py
page_analyzer/infrastructure/alembic/versions/: 2025_04_29_2003-9a7e786c0fbb_add_urls_model.py
page_analyzer/infrastructure/database/: db_dependency.py
page_analyzer/infrastructure/database/alembic/: env.py
page_analyzer/infrastructure/database/alembic/versions/: 2025_04_29_1958-acae02ac515f_add_urls_model.py  2025_04_29_2119-aaec2ee4ef79_update_urls_model.py  2025_04_29_2310-cccc1919c4ce_update_urls_model.py  2025_04_30_1441-f062b81ca566_create_all_model_after_drop.py  2025_04_30_1512-0c4cf9d9a034_update_urls_check_model.py  2025_04_30_2029-9a8863692fa9_update_urls_check_model.py  2025_04_30_2031-dd3d17b4804a_update_urls_check_model.py
page_analyzer/infrastructure/database/id_mixins/: created_at_mixins.py  id_mixins.py
page_analyzer/infrastructure/database/models/: __init__.py  base.py  url_checks.py  urls.py
page_analyzer/infrastructure/models/: __init__.py  urls.py
page_analyzer/utils/: url_parse.py
scripts/: clean_db.py  local_clean_db.py  prod_test_clean_db.py
templates/: 404.html  base.html  index.html  show_all_urls.html  show_data_for_url.html
templates/components/: flash_messages.html
tests/: 10_application_test.py
