[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page analyzer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dynaconf>=3.2.10",
    "alembic>=1.15.2",
    "flask>=3.1.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.1",
    "pydantic>=2.11.3",
    "flask-wtf>=1.2.2",
    "uvicorn>=0.34.2",
    "hatchling>=1.27.0",
    "asgiref>=3.8.1",
    "httpx>=0.28.1",
    "bs64>=0.0.1",
    "uv>=0.7.1",
    "beautifulsoup4>=4.13.4",
    "validators>=0.34.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "playwright==1.50.0",
    "pre-commit>=4.2.0",
]
packages = [
  { include = "page_analyzer" },
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]

[project.scripts]
app = "page_analyzer.app:run_app"
clean_db = "scripts.clean_db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]
